# 🐻‍❄️🌧️ Noelware Telemetry: Telemetry project for Noelware, to capture anonymous data about the running products.
# Copyright 2022 Noelware <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2021"
authors = ["Noel <cutie@floofy.dev>", "Noelware <team@noelware.org>"]
license = "Apache-2.0"
homepage = "https://telemetry.noelware.org"
repository = "https://github.com/Noelware/telemetry-server"

[dependencies]
fern = "0.6.1"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
serde = "1.0.145"
toml = "0.5.9"
once_cell = "1.15.0"
sentry = "0.27.0"
ansi_term = "0.12.1"
chrono = { version = "0.4.22", default-features = false, features = ["serde", "std"] }
chrono-tz = "0.6.3"
serde_json = "1.0.86"
anyhow = "1.0.65"
thiserror = "1.0.37"
actix-web = "4.2.1"
futures = { version = "0.3.24", default-features = false, features = ["std"] }
sentry-log = "0.27.0"
sentry-tracing = "0.27.0"
clickhouse-rs = "1.0.0-alpha.1"
rand_core = { version = "0.6.4", features = ["std"] }
async-trait = "0.1.57"
actix-utils = "3.0.0"
regex = "1.6.0"
validator = { version = "0.16.0", features = ["derive"] }

[build-dependencies]
chrono = "0.4.22"

[[bin]]
path = "src/main.rs"
name = "telemetry-server"
